<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@drawable/parchemin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/title" />

    <LinearLayout
        android:paddingTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true">

            <Button
                android:layout_margin="10dp"
            android:id="@+id/play"
            android:onClick="play"
            android:textSize="20sp"
            android:text="@string/play"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_margin="10dp"
            android:id="@+id/create"
            android:onClick="create"
            android:textSize="20sp"
            android:text="@string/createcharacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/language"
            android:onClick="changeLanguage"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:text="@string/toSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>